fixed desc not showing up on cards - home page bs

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,7 +1,11 @@
-.h1 {
-    font-size: 1.75rem;
+.main{
+    margin: 0;
 }
-
 .image{
-    align-self: stretch;
+    width: 100%;
+    height: 6rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10%;
+    background-image: url('https://cdn.shopify.com/s/files/1/0278/8275/0070/files/image_1080x.jpeg?v=1590255395');
 }
